:lipstick: [#1467] Fixed logo stretching in Safari

--- a/src/open_inwoner/scss/components/Header/Header.scss
+++ b/src/open_inwoner/scss/components/Header/Header.scss
@@ -10,11 +10,11 @@ $vm: var(--spacing-large);
   top: 0;
   min-height: 100px;
   background-color: var(--color-white);
-  width: calc(100% - var(--spacing-large));
+  width: calc(100% - var(--spacing-tiny));
 
   @media (min-width: 768px) {
     position: relative;
-    margin-bottom: var(--spacing-medium);
+    margin-bottom: var(--spacing-tiny);
   }
 
   .indicator {
@@ -94,8 +94,13 @@ $vm: var(--spacing-large);
     // Tablet search bar
     @media screen and (min-width: 768px) and (max-width: 910px) {
       > .header__actions {
-        grid-column: 4 / span 8;
+        grid-column: 1 / span 12;
         grid-row: 2;
+        margin-bottom: var(--spacing-medium);
+
+        .form__control > .label .input {
+          max-width: 100%;
+        }
       }
     }
 
@@ -121,7 +126,7 @@ $vm: var(--spacing-large);
       }
 
       @media screen and (min-width: 768px) and (max-width: 910px) {
-        grid-column: 9 / span 3;
+        grid-column: 10 / span 3;
       }
     }
   }
@@ -134,27 +139,28 @@ $vm: var(--spacing-large);
     box-sizing: border-box;
     width: fit-content;
 
+    @media screen and (max-width: 360px) {
+      margin-left: var(--spacing-tiny);
+    }
     @media (min-width: 768px) {
       height: auto;
       grid-column: 1 / span 6;
       margin: 0;
     }
-    @media (max-width: 767px) {
+    @media screen and (min-width: 361px) and (max-width: 767px) {
       padding: 8px;
       margin-right: auto;
-      margin-left: 1em;
+      margin-left: var(--spacing-large);
     }
 
     img {
-      max-height: 75px;
-      width: 100%;
-      max-width: fit-content;
+      max-height: 50px;
+      max-width: 100%;
     }
   }
 
   &__menu {
     display: flex;
-    justify-content: space-between;
     margin: 0 var(--spacing-large) 0 var(--spacing-large);
 
     @media (min-width: 768px) {
@@ -268,8 +274,9 @@ $vm: var(--spacing-large);
         grid-row: 1;
         grid-column: 11 / span 2;
 
+        /// Tablet menu
         @media screen and (min-width: 768px) and (max-width: 910px) {
-          grid-column: 9 / span 3;
+          grid-column: 10 / span 3;
         }
 
         .primary-navigation__list {
@@ -387,7 +394,7 @@ $vm: var(--spacing-large);
   position: relative;
 
   .form {
-    padding: 0 0 var(--spacing-medium) 0;
+    padding: 0 0 var(--spacing-large) 0;
   }
 
   @media (min-width: 768px) {
@@ -413,6 +420,10 @@ $vm: var(--spacing-large);
         > .primary-navigation__list-item {
         display: flex;
         flex-direction: row;
+
+        .link--icon {
+          gap: var(--spacing-large);
+        }
 
         &.dropdown-nav__toggle {
           flex-direction: column;
@@ -470,7 +481,7 @@ $vm: var(--spacing-large);
           }
 
           .form--inline {
-            padding: var(--spacing-extra-large) 0 var(--spacing-extra-large);
+            padding: 19px 0 var(--spacing-extra-large);
             margin: 0;
           }
         }
@@ -482,6 +493,7 @@ $vm: var(--spacing-large);
 
           .primary-navigation {
             border-bottom: 1px solid var(--color-gray-light);
+            padding-bottom: var(--spacing-medium);
           }
 
           > .primary-navigation
