--- a/src/open_inwoner/scss/components/Header/PrimaryNavigation.scss
+++ b/src/open_inwoner/scss/components/Header/PrimaryNavigation.scss
@@ -33,7 +33,7 @@
   & > &__list > &__list-item {
     box-sizing: border-box;
     display: flex;
-    align-items: start;
+    align-items: center;
     flex-direction: column;
     justify-content: start;
     min-height: var(--row-height);
